--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^1.18.4",
     "path": "^0.12.7",
     "pug": "2.0.0-beta11",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "twilio": "^3.22.0"
   }
 }
