--- a/server/package.json
+++ b/server/package.json
@@ -7,12 +7,15 @@
     "devstart": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@google-cloud/translate": "^2.1.2",
+    "async": "^2.6.1",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
     "dotenv": "^6.1.0",
     "express": "~4.16.0",
+    "fs": "^0.0.1-security",
     "http-errors": "~1.6.2",
     "mongoose": "^5.3.3",
     "morgan": "~1.9.0",
