--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "fs": "0.0.1-security",
+    "path": "^0.12.7",
+    "striptags": "^3.1.1",
     "twilio": "^3.27.1"
   },
   "devDependencies": {
