--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "export ENV=test || SET \"NODE_ENV=test\" && jest"
+    "test": "export ENV=test || SET \"NODE_ENV=test\" && jest",
+    "test:watch": "export ENV=test || SET \"NODE_ENV=test\" && jest --watch"
   },
   "author": "",
   "license": "ISC",
