--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server/server.js",
     "test": "export ENV=test || SET \"NODE_ENV=test\" && jest",
-    "test:watch": "export ENV=test || SET \"NODE_ENV=test\" && jest --watch"
+    "test:watch": "export ENV=test || SET \"NODE_ENV=test\" && jest --watch",
+    "test:coverage": "export ENV=test || SET \"NODE_ENV=test\" && jest --coverage && codecov -t 2b2ce73e-a727-425f-a0d4-b05cb364661f"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +23,7 @@
     "twilio": "^3.27.1"
   },
   "devDependencies": {
+    "codecov": "^3.2.0",
     "jest": "^23.6.0",
     "supertest": "^3.4.1"
   }
